--- a/B2207521_TranMinhHieu/sanpham.html
+++ b/B2207521_TranMinhHieu/sanpham.html
@@ -43,19 +43,19 @@
                 <div>
                     <img src="data/images/sanpham/kiwi.jpg" alt="">
                     <h2>Sữa Chua Vị Kiwi</h2>
-                    <p>Hương vị thơm ngon của trái Kiwi xanh, nổi tiếng của đất nước New Zealand có trong Sữa chua vị Kiwi xanh đem đến một món ăn nhẹ Siêu ngon và tốt cho hệ tiêu hóa. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Hương vị thơm ngon của trái Kiwi xanh, nổi tiếng của đất nước New Zealand có trong Sữa chua vị Kiwi xanh đem đến một món ăn nhẹ Siêu ngon và tốt cho hệ tiêu hóa. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp001" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp001')">Đặt hàng</button></span></p>
                 </div>
 
                 <div>
                     <img src="data/images/sanpham/mango.jpg" alt="">
                     <h2>Sữa Chua Vị Xoài</h2>
-                    <p>Sữa chua xoài thích hợp cho mọi lứa tuổi, vì vậy hãy để cả gia đình quây quần bên nhau cùng thưởng thức món ăn thơm ngon, bổ dưỡng này. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Sữa chua xoài thích hợp cho mọi lứa tuổi, vì vậy hãy để cả gia đình quây quần bên nhau cùng thưởng thức món ăn thơm ngon, bổ dưỡng này. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp002" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp002')">Đặt hàng</button></span></p>
                 </div>
 
                 <div>
                     <img src="data/images/sanpham/cantaloupe.jpg" alt="">
                     <h2>Sữa Chua Vị Dưa Lưới</h2>
-                    <p>Trong dưa lưới chứa rất nhiều vitamin C có tác dụng làm đẹp da hiệu quả. Phụ nữ ăn sinh tố dưa lưới thường xuyên sẽ có làn da mịn màng. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Trong dưa lưới chứa rất nhiều vitamin C có tác dụng làm đẹp da hiệu quả. Phụ nữ ăn sinh tố dưa lưới thường xuyên sẽ có làn da mịn màng. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp003" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp003')">Đặt hàng</button></span></p>
                 </div>
 
             </section>
@@ -66,19 +66,19 @@
                 <div>
                     <img src="data/images/sanpham/blackberry.jpg" alt="">
                     <h2>Sữa Chua Vị Mâm Xôi</h2>
-                    <p>Quả mâm xôi là loại quả ăn họ hoa hồng, có nguồn gốc từ châu Âu, Bắc Á và được trồng ở các vùng ôn đới trên toàn thế giới. Có nhiều loại, bao gồm đen, tím và vàng. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Quả mâm xôi là loại quả ăn họ hoa hồng, có nguồn gốc từ châu Âu, Bắc Á và được trồng ở các vùng ôn đới trên toàn thế giới. Có nhiều loại, bao gồm đen, tím và vàng. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp004" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp004')">Đặt hàng</button></span></p>
                 </div>
 
                 <div>
                     <img src="data/images/sanpham/strawberry.jpg" alt="">
                     <h2>Sữa Chua Vị Dâu Tây</h2>
-                    <p>Dâu tây là một loài cây thân thảo có thân ngắn và các chiếc lá mọc gần với nhau. Lá có nhiều gai, bề mặt lá có nhiều lông tơ và kích thước lá có thể khác nhau ở từng giống. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Dâu tây là một loài cây thân thảo có thân ngắn và các chiếc lá mọc gần với nhau. Lá có nhiều gai, bề mặt lá có nhiều lông tơ và kích thước lá có thể khác nhau ở từng giống. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp005" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp005')">Đặt hàng</button></span></p>
                 </div>
 
                 <div>
                     <img src="data/images/sanpham/blueberry.jpg" alt="">
                     <h2>Sữa Chua Vị Việt Quất</h2>
-                    <p>Quả việt quất chứa các dưỡng chất tốt cho sức khỏe như chất xơ, kali, folate, vitamin C và vitamin B6 (những chất hỗ trợ rất tốt cho sức khỏe của tim). <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Quả việt quất chứa các dưỡng chất tốt cho sức khỏe như chất xơ, kali, folate, vitamin C và vitamin B6 (những chất hỗ trợ rất tốt cho sức khỏe của tim). <a href="#">Xem chi tiết</a> <span>Số Lượng: <input  id="sp006" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp006')">Đặt hàng</button></span></p>
                 </div>
 
             </section>
@@ -89,19 +89,19 @@
                 <div>
                     <img src="data/images/sanpham/grapes.jpg" alt="">
                     <h2>Sữa Chua Vị Bưởi</h2>
-                    <p>Bưởi là một loại quả thuộc chi Cam chanh có nguồn gốc từ Đông Nam Á. Bưởi tiếng Anh gọi là Pomelo, tuy nhiên nhiều từ điển ở Việt Nam lại dịch thành grapefruit. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Bưởi là một loại quả thuộc chi Cam chanh có nguồn gốc từ Đông Nam Á. Bưởi tiếng Anh gọi là Pomelo, tuy nhiên nhiều từ điển ở Việt Nam lại dịch thành grapefruit. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp007" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp007')">Đặt hàng</button></span></p>
                 </div>
 
                 <div>
                     <img src="data/images/sanpham/green-apple.jpg" alt="">
                     <h2>Sữa Chua Vị Táo Xanh</h2>
-                    <p>Táo xanh có hàm lượng chất xơ cao giúp tăng cường quá trình trao đổi chất của cơ thể. Bên cạnh đó, chất xơ còn giúp quá trình giải độc gan và hệ tiêu hóa. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Táo xanh có hàm lượng chất xơ cao giúp tăng cường quá trình trao đổi chất của cơ thể. Bên cạnh đó, chất xơ còn giúp quá trình giải độc gan và hệ tiêu hóa. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input  id="sp008" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp008')">Đặt hàng</button></span></p>
                 </div>
 
                 <div>
                     <img src="data/images/sanpham/pineapple.jpg" alt="">
                     <h2>Sữa Chua Vị Dứa</h2>
-                    <p>Dứa có các tên gọi khác như là khóm, thơm, khớm, gai hoặc huyền nương. Đây là một loại quả nhiệt đới. Dứa là cây bản địa của các nước Nam Mỹ. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input type="number" min="0" max="100" value="0"> <button>Đặt hàng</button></span></p>
+                    <p>Dứa có các tên gọi khác như là khóm, thơm, khớm, gai hoặc huyền nương. Đây là một loại quả nhiệt đới. Dứa là cây bản địa của các nước Nam Mỹ. <a href="#">Xem chi tiết</a> <span>Số Lượng: <input id="sp009" type="number" min="0" max="100" value="0"> <button onclick="addCart('sp009')">Đặt hàng</button></span></p>
                 </div>
                     
             </section>
@@ -121,4 +121,5 @@
 		</div>
 	</footer>
 </body>
+<script src="js/main.js"></script>
 </html>
