--- a/B2207521_TranMinhHieu/trangchu.html
+++ b/B2207521_TranMinhHieu/trangchu.html
@@ -26,7 +26,7 @@
 		<img src="data/images/header-img3.png" alt="" id="header-img3">
 
 		<div class="search-container">
-			<form method="get" action="sanpham.html" id="form">
+			<form method="get" action="timkiem.html" id="form">
 				<div class="search three-cols">					
 					<input id="search" type="text"  placeholder="Nhập nội dung cần tìm..."  name="search">
 					<button class="fa fa-search" id="srch"></button>
