--- a/Lab 6/registration.html
+++ b/Lab 6/registration.html
@@ -71,7 +71,7 @@
             <div class="group-box">
                 <div class="title">Đăng ký</div>
                 <div class="form-container">
-                    <form action="">
+                    <form action="#">
                         <table>
                             <tr>
                               <td>MSSV:</td>
@@ -88,9 +88,9 @@
                             <tr>
                                 <td>Giới tính:</td>
                                 <td>
-                                  <input type="radio" id="nam" name="gioiTinh">
+                                  <input type="radio" id="nam" name="gioiTinh" id="nam">
                                   <label for="nam">Nam</label>
-                                  <input type="radio" id="nu" name="gioiTinh">
+                                  <input type="radio" id="nu" name="gioiTinh" id="nu">
                                   <label for="nu">Nữ</label>
                                 </td>
                             </tr>
@@ -103,7 +103,7 @@
                             <tr>
                                 <td>Quê quán:</td>
                                 <td>
-                                  <textarea class="input-enter" name="" id="" cols="30" rows="2" id="ht"></textarea>
+                                  <textarea class="input-enter" name="" id="quequan" cols="30" rows="2"></textarea>
                                 </td>
                             </tr>
                             <tr>
@@ -115,7 +115,7 @@
                             <tr>
                                 <td>Email:</td>
                                 <td>
-                                  <input class="input-enter" type="email" placeholder="lvquan@gmail.com">
+                                  <input class="input-enter" type="email" placeholder="lvquan@gmail.com" id="email">
                                 </td>
                             </tr>
                             <tr>
