--- a/Lab 6/index.html
+++ b/Lab 6/index.html
@@ -29,7 +29,7 @@
         <div id="login">
             <a href="./registration.html">Đăng ký</a>
             |
-            <a href="">Đăng nhập</a>
+            <a href="./login.html">Đăng nhập</a>
         </div>
 
     </nav>
